--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <a class="bg-indigo-600 text-white px-6 py-3 rounded shadow hover:bg-indigo-700 transition" href="#">Browse Directory</a>
 <a class="bg-white border border-indigo-600 text-indigo-600 px-6 py-3 rounded shadow hover:bg-indigo-50 transition" href="#">Claim Your Listing (Free)</a>
 </div>
+<p class="mb-6 text-sm text-green-700 font-medium">* Launch pricing available for a limited time only</p>
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 text-left">
 <!-- Basic -->
 <div class="bg-white p-6 rounded shadow border">
 <h3 class="text-xl font-semibold mb-1">Basic</h3>
-<p class="text-sm text-gray-500 mb-2">Perfect for new businesses</p>
-<p class="text-2xl font-bold mb-4">$19<span class="text-base font-normal">/mo</span></p>
+<p class="text-sm text-gray-500 line-through">$19/mo</p>
+<p class="text-2xl font-bold text-green-600 mb-4">$12<span class="text-base font-normal">/mo (launch)</span></p>
 <ul class="text-sm space-y-1 mb-4 text-gray-700">
 <li>• 1 active listing</li>
 <li>• Basic profile</li>
@@ -33,8 +34,8 @@
 <!-- Pro -->
 <div class="bg-white p-6 rounded shadow border">
 <h3 class="text-xl font-semibold mb-1">Pro</h3>
-<p class="text-sm text-gray-500 mb-2">For growing exposure</p>
-<p class="text-2xl font-bold mb-4">$49<span class="text-base font-normal">/mo</span></p>
+<p class="text-sm text-gray-500 line-through">$49/mo</p>
+<p class="text-2xl font-bold text-green-600 mb-4">$29<span class="text-base font-normal">/mo (launch)</span></p>
 <ul class="text-sm space-y-1 mb-4 text-gray-700">
 <li>• 3 listings</li>
 <li>• Enhanced profile</li>
@@ -46,8 +47,8 @@
 <!-- Premium -->
 <div class="bg-white p-6 rounded shadow border">
 <h3 class="text-xl font-semibold mb-1">Premium</h3>
-<p class="text-sm text-gray-500 mb-2">Maximum visibility</p>
-<p class="text-2xl font-bold mb-4">$99<span class="text-base font-normal">/mo</span></p>
+<p class="text-sm text-gray-500 line-through">$99/mo</p>
+<p class="text-2xl font-bold text-green-600 mb-4">$59<span class="text-base font-normal">/mo (launch)</span></p>
 <ul class="text-sm space-y-1 mb-4 text-gray-700">
 <li>• 10 listings</li>
 <li>• Featured placement</li>
@@ -59,8 +60,8 @@
 <!-- 101 Add-On -->
 <div class="bg-white p-6 rounded shadow border border-indigo-500">
 <h3 class="text-xl font-semibold text-indigo-600 mb-1">101 Add-On</h3>
-<p class="text-sm text-gray-500 mb-2">Verified &amp; Featured (by application)</p>
-<p class="text-xl mb-4"><span class="line-through text-gray-400">$49</span> <span class="text-green-600 font-bold">$35/mo</span></p>
+<p class="text-sm text-gray-500 line-through">$49/mo</p>
+<p class="text-xl text-green-600 font-bold mb-4">$35<span class="text-base font-normal">/mo (launch)</span></p>
 <ul class="text-sm space-y-1 mb-4 text-gray-700">
 <li>• “101 Approved” badge</li>
 <li>• Home page feature</li>
