--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <div class="bg-white p-6 rounded shadow border">
 <h3 class="text-xl font-semibold mb-1">Basic</h3>
 <p class="text-sm text-gray-500 line-through">$19/mo</p>
+<p class="text-sm text-gray-500 mb-2">14-day free trial</p>
 <p class="text-2xl font-bold text-green-600 mb-4">$12<span class="text-base font-normal">/mo (launch)</span></p>
 <ul class="text-sm space-y-1 mb-4 text-gray-700">
 <li>• 1 active listing</li>
@@ -35,6 +36,7 @@
 <div class="bg-white p-6 rounded shadow border">
 <h3 class="text-xl font-semibold mb-1">Pro</h3>
 <p class="text-sm text-gray-500 line-through">$49/mo</p>
+<p class="text-sm text-gray-500 mb-2">14-day free trial</p>
 <p class="text-2xl font-bold text-green-600 mb-4">$29<span class="text-base font-normal">/mo (launch)</span></p>
 <ul class="text-sm space-y-1 mb-4 text-gray-700">
 <li>• 3 listings</li>
@@ -48,6 +50,7 @@
 <div class="bg-white p-6 rounded shadow border">
 <h3 class="text-xl font-semibold mb-1">Premium</h3>
 <p class="text-sm text-gray-500 line-through">$99/mo</p>
+<p class="text-sm text-gray-500 mb-2">14-day free trial</p>
 <p class="text-2xl font-bold text-green-600 mb-4">$59<span class="text-base font-normal">/mo (launch)</span></p>
 <ul class="text-sm space-y-1 mb-4 text-gray-700">
 <li>• 10 listings</li>
