--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 <li>• Contact form</li>
 <li>• Basic analytics</li>
 </ul>
-<button class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700 transition">Start</button>
+<a href="https://buy.stripe.com/fZeaEO39f6JS7sI147" target="_blank" rel="noopener" class="w-full block text-center bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700 transition">
+  Start 14-Day Free Trial
+</a>
 </div>
 <!-- Pro -->
 <div class="bg-white p-6 rounded shadow border">
@@ -44,7 +46,9 @@
 <li>• Photo gallery</li>
 <li>• Video embed</li>
 </ul>
-<button class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700 transition">Start</button>
+<a href="https://buy.stripe.com/4gw3cmeRX9W46oE002" target="_blank" rel="noopener" class="w-full block text-center bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700 transition">
+  Start 14-Day Free Trial
+</a>
 </div>
 <!-- Premium -->
 <div class="bg-white p-6 rounded shadow border">
@@ -58,7 +62,9 @@
 <li>• Premium profile</li>
 <li>• Support + Reports</li>
 </ul>
-<button class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700 transition">Start</button>
+<a href="https://buy.stripe.com/28o6oy8tzgks28odQR" target="_blank" rel="noopener" class="w-full block text-center bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700 transition">
+  Start 14-Day Free Trial
+</a>
 </div>
 <!-- 101 Add-On -->
 <div class="bg-white p-6 rounded shadow border border-indigo-500">
@@ -70,7 +76,9 @@
 <li>• Home page feature</li>
 <li>• Priority visibility</li>
 </ul>
-<button class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700 transition">Apply</button>
+<a href="https://buy.stripe.com/eVa14edNT7NW00gdQU" target="_blank" rel="noopener" class="w-full block text-center bg-indigo-700 text-white py-2 rounded hover:bg-indigo-800 transition">
+  Add 101 Approved – $35 Launch Price
+</a>
 </div>
 </div>
 </div>
